--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -13,7 +13,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/js/standalone/selectize.min.js" integrity="sha512-pF+DNRwavWMukUv/LyzDyDMn8U2uvqYQdJN0Zvilr6DDo/56xPDZdDoyPDYZRSL4aOKO/FGKXTpzDyQJ8je8Qw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.min.js" integrity="sha512-yrLbujQF3UPLrlaavtewYmv7OFD8AGO5PS8jg0VKlXP8kW9POHaG/bbpwSbpkqe4SCXVwTtYAMsKdOukT11bxQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="{{ url_for('static', filename='main.js') }}"></script>
     <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
@@ -28,7 +30,137 @@
 
     <div class="container-fluid">
         <div class="row">
-          <div class="col-12" id="networkViewContainer">
+          <div class="col-3 border-end border-light border-2" id="configColumn">
+
+              <form id="searchform">
+                <div class="mb-3">
+                    <label for="queryInput" class="form-label">Search PSS</label>
+
+                    <div id="myModal">
+                        <select id="queryInput" class="select_items">
+                        </select>
+                    </div>
+                </div>
+
+                <div class="container mb-3 me-0 pe-0">
+                  <div class="row">
+                    <div class="col-md-6 offset-md-6 me-0">
+                        <button type="button" class="btn btn-outline-primary float-end" id="add2selected">add to query</button>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- <div class="mb-3">
+                    <label for="nodeList" class="form-label">Your query</label>
+                    <div class="input-group">
+                      <span class="input-group-text">Selected nodes</span>
+                      <textarea class="form-control" aria-label="Selected nodes" id="nodeList"></textarea>
+                    </div>
+                </div> -->
+
+                <label for="queryList" class="form-label">Your query</label>
+                  <div class="list-group" id="queryList">
+                    <!-- <a href="#" class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">List group item heading</h5>
+                        <small>3 days ago</small>
+                      </div>
+                      <p class="mb-1">Some placeholder content in a paragraph.</p>
+                      <small>And some small print.</small>
+                      <small>And some small print1.</small>
+                      <small>And some small print2.</small>
+                      <button type="button" class="btn btn-link btn-sm float-end"><i class="bi-x-circle" style="color: red;"></i></button>
+                    </a> -->
+
+                  </div>
+
+
+                  <div class="container mb-3 me-0 pe-0">
+                    <div class="row">
+                      <div class="col-md-6 offset-md-6 me-0">
+                          <button type="button" class="btn btn-primary float-end" id="searchButton">search</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- <div class="container mb-3 me-0 pe-0">
+                    <div class="row">
+                      <div class="col-md-6 offset-md-6 me-0">
+                          <button type="button" class="btn btn-primary float-end" id="draw_complete_network_button">draw full</button>
+                      </div>
+                    </div>
+                  </div> -->
+
+
+
+            <!-- <label for="queryList" class="form-label">Your query</label>
+              <div class="list-group" id="queryList">
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small>3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small>And some small print.</small>
+                  <button type="button" class="btn btn-link btn-sm float-end"><i class="bi-x-circle" style="color: red;"></i></button>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small class="text-muted">3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small class="text-muted">And some muted small print.</small>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small class="text-muted">3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small class="text-muted">And some muted small print.</small>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small class="text-muted">3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small class="text-muted">And some muted small print.</small>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small class="text-muted">3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small class="text-muted">And some muted small print.</small>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">List group item heading</h5>
+                    <small class="text-muted">3 days ago</small>
+                  </div>
+                  <p class="mb-1">Some placeholder content in a paragraph.</p>
+                  <small class="text-muted">And some muted small print.</small>
+                </a>
+              </div> -->
+
+              <!-- <div class="container mb-3 me-0 pe-0">
+                <div class="row">
+                  <div class="col-md-6 offset-md-6 me-0">
+                      <button type="button" class="btn btn-primary float-end" id="extract_and_draw_button">search</button>
+                  </div>
+                </div>
+              </div> -->
+
+
+
+      </form>
+
+          </div>
+
+          <div class="col-9" id="networkViewContainer">
               <div id="networkView"></div>
           </div>
 
