--- a/services/web/static/main.css
+++ b/services/web/static/main.css
@@ -66,3 +66,8 @@
     max-width: 300px !important; */
     /* over-flow: break-word; */
 } */
+
+/* .textwrap {
+    overflow-wrap: anywhere;
+    white-space: normal;
+} */
