--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -21,7 +21,7 @@
     <script src="{{ url_for('static', filename='main.js') }}"></script>
     <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
 
-    <title>CKN netviz</title>
+    <title>SKM - PSS explorer</title>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -31,7 +31,24 @@
 
     <div class="container-fluid">
         <div class="row">
+          <ul class="nav navbar-nav" style="background: #00672c; color:floralwhite; width: 100%;">
+            <a class="nav-link" href="/" style="color:floralwhite;  margin-left: 10px;"> &larr; Home</a>
+          </ul>
+        </div>
+
+        <div class="row">
           <div class="col-3 border-end border-light border-2" id="configColumn">
+            <div class="card m-1">
+              <div class="card-body">
+              <h1 class="card-title"> PSS explorer </h1>
+              <p  class="card-text"> Use the search-box to find
+             entities (including reactions) in PSS and add them to the query box.
+              <br><br>
+              <b>Clicking <em>extract subgraph</em>:</b> If the query contains only one node a
+              neighbourhood is returned. Otherwise, shortest paths between all pairs of nodes are merged and returned.
+              </p>
+              </div>
+            </div>
 
               <form id="searchform">
                 <div class="mb-3">
