services/web/templates/index.html

--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -39,6 +39,12 @@
         </div>
 
         <div class="row">
+          <ul class="nav navbar-nav" style="background: #00672c; color:floralwhite; width: 100%;">
+            <a class="nav-link" href="/" style="color:floralwhite;  margin-left: 10px;"> &larr; Home</a>
+          </ul>
+        </div>
+
+        <div class="row">
           <div class="col-3 border-end border-light border-2" id="configColumn">
             <div class="card m-1">
               <div class="card-body">
@@ -46,8 +52,7 @@
               <p  class="card-text"> Use the search-box to find
              entities (including reactions) in PSS and add them to the query box.
               <br><br>
-              <b>Clicking <em>extract subgraph</em>:</b> If the query contains only one node a
-              neighbourhood is returned. Otherwise, the undirected shortest paths between all pairs of nodes are merged and returned.
+              <b>Clicking <em>extract subgraph</em>:</b> If the query contains only one node a neighbourhood is returned. Otherwise, the undirected shortest paths between all pairs of nodes are merged and returned.
               </p>
               <button type="button"  class="btn btn-outline-info" data-toggle="popover"
                  data-bs-content='
@@ -72,7 +77,6 @@
                  title="Help" >
                  Interpreting the result
               </button>
-
               </div>
             </div>
 
