--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -18,8 +18,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/voca/1.4.0/voca.min.js" integrity="sha512-yrLbujQF3UPLrlaavtewYmv7OFD8AGO5PS8jg0VKlXP8kW9POHaG/bbpwSbpkqe4SCXVwTtYAMsKdOukT11bxQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/string-format/0.5.0/string-format.min.js" integrity="sha512-umUQjNj1rAebq5zbgyU2sFNEREC48ohuUAdAwTa1qbEibzzbTnJLhj8ASNNsoKkWQ3ef+QjtZvGgVWJulLetxQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <script src="{{ url_for('static', filename='main.js') }}"></script>
-    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet" />
+    <script src="{{ url_for('bp.static', filename='main.js') }}"></script>
+    <link href="{{ url_for('bp.static', filename='main.css') }}" rel="stylesheet" />
 
     <link rel="shortcut icon" href="/biomine/static/favicon.ico">
 
@@ -114,7 +114,7 @@
                   <div class="container mb-3 me-0 pe-0">
                     <div class="row">
                       <div class="col-md-6 offset-md-6 me-0">
-                          <button type="button" class="btn btn-primary float-end" id="searchButton">search</button>
+                          <button type="button" class="btn btn-primary float-end" id="searchButton">extract subgraph</button>
                       </div>
                     </div>
                   </div>
