--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -64,7 +64,7 @@
                     </div>
                   </p>
 
-                 <p>For more information, see <a href="https://skm.nib.si/documentation/pss-db#_9jzo3jll39m3">SKM Documentation &#167; Reactions</a>. </p>
+                 <p>For more information, see <a href="/documentation/pss-db#_9jzo3jll39m3" target="_blank">SKM Documentation &#167; Reactions</a>. </p>
 
                  <p> Note that the shortest path does not take into account the direction of the edges and does not extract the complete reactions.
                 </div>'
