forgot to also fix image urls

--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -56,11 +56,11 @@
 
                  <p> For example, the following reaction  (A + B &rarr; C, catalysed by e):
                     <div style="width:400; height:135">
-                      <img  width=400px; height=135px"  src="https://skm.nib.si/static/images/reaction_types/basic-reaction-biology.png"/>
+                      <img  width=400px; height=135px"  src="/static/images/reaction_types/basic-reaction-biology.png"/>
                     </div>
                   Is represented in PSS as:
                     <div style="width:400px; height:200px;">
-                      <img width=400 height=200 src="https://skm.nib.si/static/images/reaction_types/basic-reaction.png"/>
+                      <img width=400 height=200 src="/static/images/reaction_types/basic-reaction.png"/>
                     </div>
                   </p>
 
