--- a/services/web/static/main.css
+++ b/services/web/static/main.css
@@ -1,5 +1,6 @@
-#nodeList {
-    height: 300px;
+#queryList {
+    min-height: 300px;
+    height: calc(100vh - 700px);
 }
 
 #searchform {
@@ -7,7 +8,6 @@
 }
 
 .list-group{
-    height: 300px;
     padding: 3px;
     /* min-height: 300px;
     max-height: 400px; */
@@ -17,6 +17,7 @@
     -webkit-overflow-scrolling: touch;
     border: 1px solid lightgray;
 }
+
 
 .selectize-control.select_items .selectize-input > div {
    /* padding: 0px 10px; */
@@ -77,9 +78,20 @@
 }
 
 .vex-content {
-    width: 550px !important;
+    width: 650px !important;
     font-size: 1em !important;
     /* line-height: 1.5em !important; */
     font-family: var(--bs-font-sans-serif) !important;
 
+}
+
+/* page footer --------------------------------- */
+#footer {
+  background: #00672c;
+  height: 20px;
+  position: fixed;
+  bottom: 0px;
+  left: 0;
+  width: 100%;
+  z-index: 99;
 }
