--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -52,7 +52,7 @@
         </div>
 
         <div class="row">
-          <div class="col-3 border-end border-light border-2" id="configColumn">
+          <div class="col-lg-3 col-sm-5 border-end border-light border-2" id="configColumn">
             <div class="card m-1">
               <div class="card-body">
               <h1 class="card-title"> PSS explorer </h1>
@@ -187,7 +187,7 @@
 
           </div>
 
-          <div class="col-9" id="networkViewContainer">
+          <div class="col-lg-9 col-sm-7" id="networkViewContainer">
               <div id="networkView"></div>
           </div>
 
