--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -40,7 +40,8 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+<!--     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script> -->
+    <script src="{{ url_for('static', filename='vis-network.min.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/verge@1.10.2/verge.min.js"></script>
 
 
