re-add lost library

--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -33,6 +33,8 @@
     <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/verge@1.10.2/verge.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.4/dist/FileSaver.min.js"></script>
+
     <link href="{{ url_for('bp.static', filename='main.css') }}" rel="stylesheet" />
     <script src="{{ url_for('bp.static', filename='main.js') }}"></script>
 
