--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -30,7 +30,8 @@
     <link rel="shortcut icon" href="{{ url_for('bp.static', filename='favicon.ico') }}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+    <script src="{{ url_for('bp.static', filename='vis-network.min.js') }}"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/verge@1.10.2/verge.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.4/dist/FileSaver.min.js"></script>
@@ -44,12 +45,34 @@
     </title>
   </head>
   <body>
+
+    <nav class="navbar navbar-default navbar-expand sticky-top">
+      <div class="container-fluid" >
+        <ul class="nav navbar-nav">
+          <li>
+            <li> <a class="nav-link" href="/" style="margin-left: 10px;"> &larr; SKM Home</a></li>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                <a class="nav-link" href="">
+                  <span style="display: flex; align-items: center; ">
+                          <i class="bi bi-person" style="color: floralwhite; margin-right: 6px;"></i>
+                          {% if logged_in %}
+                              member
+                          {% else %}
+                             visitor
+                          {% endif %}
+                        </span>
+                </a>
+              </li>
+       </ul>
+      </div>
+    </nav> <!-- close nav bar -->
+
+
     <div class="container-fluid h-100">
-        <div class="row sticky-top" style="height:40px;">
-          <ul class="nav navbar-nav" style="background: #00672c; color:floralwhite; width: 100%;">
-            <a class="nav-link" href="/" style="color:floralwhite;  margin-left: 10px;"> &larr; Home</a>
-          </ul>
-        </div>
 
         <div class="row" style="height:calc(100vh - 60px);"> <!-- h-100"> -->
           <div class="px-1 col-xs-6 col-sm-5 col-md-5 col-lg-4 col-xl-3 col-xxl-3 border-end border-light border-2" id="configColumn">
