add doi urls, export png, always expand reactions

--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -64,15 +64,17 @@
           <ul class="dropdown-menu" id="saveAsDropdown" aria-labelledby="saveAsButton">
             <a class="dropdown-item" href="#nodes">nodes (.csv format)</a>
             <a class="dropdown-item" href="#edges">edges (.csv format)</a>
+            <a class="dropdown-item" href="#png">image (.png format)</a>
           </ul>
         </div>
-
-      </div>
+    </div>
 
       <div class="col-6">
         <div class="pe-0">
           <button type="button" class="btn btn-primary float-end" id="searchButton">search</button>
         </div>
+        <!-- <input type="button" onclick="exportSvg();" value="Export SVG"/> -->
+
       </div>
 
     </div>
