--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -56,7 +56,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a class="nav-link" href="">
+                <a class="nav-link">
                   <span style="display: flex; align-items: center; ">
                           <i class="bi bi-person" style="color: floralwhite; margin-right: 6px;"></i>
                           {% if logged_in %}
