interface improvements, don't try to expand after double click on not a node, add tips popover

--- a/services/web/templates/index.html
+++ b/services/web/templates/index.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
-{% block title %}PSS explorer{% endblock %}
+{% block title %}PSS Explorer{% endblock %}
 
-{% block page_title %}PSS explorer{% endblock %}
+{% block page_title %}PSS Explorer{% endblock %}
 
 {% block description %}
   <p>
@@ -80,4 +80,21 @@
 
     </div>
   </div>
+
+    <a id="tip_popover"
+       style="top:45px; right:40px; position: absolute; z-index: 99;"
+       class="py-0  btn btn-outline-danger btn-xs inline"
+       tabindex="0"
+       role="button"
+       data-trigger="focus"
+       data-toggle="popover"
+       data-bs-content='
+   <div style="width:100%;">
+            <p>Right click on an edge or node to access its context menu.</p>
+            <p>Double click on a node to expand its neighbours.
+  </div>' data-bs-html="true" title="Network tips">
+      Tip!
+    </a>
+
+
 {% endblock %}
