unify with CKN Explorer

--- a/services/web/static/main.css
+++ b/services/web/static/main.css
@@ -1,17 +1,19 @@
-#queryList {
-    min-height: 200px;
-    height: calc(100vh - 800px);
+body {
+    overflow-y: hidden;
 }
 
 #searchform {
-    margin: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 #configColumn {
+    height: calc( 100vh - 80px );
+
+    display: flex;
+    flex-direction: column;
+
     overflow-y: scroll;
-}
-
-#configColumn {
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
     scrollbar-width: none;  /* Firefox */
 }
@@ -19,28 +21,51 @@
     display: none;  /* Safari and Chrome */
 }
 
-.list-group{
-    padding: 3px;
-    /* min-height: 300px;
-    max-height: 400px; */
-    margin-bottom: 10px;
-    /* overflow:scroll; */
-    overflow-y:scroll;
-    overflow-x:hidden;
-    -webkit-overflow-scrolling: touch;
-    border: 1px solid lightgray;
+#networkView{
+    position: absolute;
+    bottom:0 ;
+    padding-bottom: 20px;
 }
 
+.h1, h1 {
+    font-size: 2rem;
+}
+
+.accordion-button {
+    padding: 0.5rem 0.55rem;
+}
+
+.form-select {
+    background-image: none;
+    padding: 0;
+}
+
+.list-group{
+    flex: 1;
+    padding: 1px;
+    margin-bottom: 10px;
+    overflow-x:hidden;
+    border: 1px solid lightgray;
+    min-height: 40px;
+}
+
+.selectize-dropdown, .selectize-input, .selectize-input input {
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    font-smoothing: inherit;
+}
 
 .selectize-control.select_items .selectize-input > div {
    /* padding: 0px 10px; */
    padding: 0px 3px 0px 3px;
    margin: 0px 3px 0px 0px;
-   font-size: 12px;
+   font-size: 0.8rem;
    font-weight: normal;
 }
 
- .selectize-dropdown-content > div {
+.selectize-dropdown-content > div {
      margin-bottom: 10px;
 }
 
@@ -52,11 +77,37 @@
     /* color: #a0a0a0; */
 }
 
-
 .selectize-control.select_items .selectize-dropdown .caption {
     font-size: 12px;
     display: block;
     color: #a0a0a0;
+}
+
+
+/*https://github.com/selectize/selectize.js/issues/1584*/
+.selectize-control {
+    padding: 0;
+}
+.selectize-input {
+    border: none;
+    height: 100%;
+    justify-content: center;
+    display: block;
+}
+
+.no-close .ui-dialog-titlebar-close {
+  display: none;
+}
+
+.list-group-item {
+    padding: 0.3rem 0.3rem;
+    display: block;
+    font-size: 14px;
+}
+
+.list-group-item h5{
+    font-size: 1rem;
+    margin-bottom: 0px;
 }
 
 .list-group-item small {
@@ -90,14 +141,19 @@
     max-width: 460px;
 }
 
+.popover-body {
+    overflow-y: scroll;
+    max-height: 50vh;
+}
+
 .vex-content {
-    width: 650px !important;
+    width: 550px !important;
     font-size: 1em !important;
     /* line-height: 1.5em !important; */
     font-family: var(--bs-font-sans-serif) !important;
 }
 
-
+/* nav --------------------------------- */
 .navbar{ /*navbar is same width as content */
   width: 100%;
   margin-left: auto;
@@ -107,7 +163,6 @@
   border-radius: 0;
   padding: 0;
   z-index: 99;
-  height: 40px;
 }
 
 .nav-link, .nav-link:focus{
@@ -117,12 +172,25 @@
 
 .nav-link:hover  {
   color: black;
-  background-color: #ddd;
+  background-color: #fff;
 }
 
-.navbar-default .nav-link  {
-  padding-top: 0em;
-  padding-bottom: 0em;
+.nav-tabs > .nav-link{
+  color: gray;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+    margin-top: 0;
+ }
+
+.navbar-nav > li:not(:first-child)::after {
+    /*why is after rendered in front?*/
+    content: '';
+    border-left: 1px solid silver;
+    position: absolute;
+    top: 5px;
+    height: 40px;
 }
 
 /* page footer --------------------------------- */
