--- a/services/web/templates/base.html
+++ b/services/web/templates/base.html
@@ -48,55 +48,109 @@
 
   <body>
 
+
     <nav class="navbar navbar-default navbar-expand sticky-top">
       <div class="container-fluid" >
-        <ul class="nav navbar-nav">
-          <li>
-            <li> <a class="nav-link" href="/" style="margin-left: 10px;"> &larr; SKM Home</a></li>
-          </li>
+        <ul class="nav navbar-nav ms-4">
+          <li> <a class="nav-link" href="/"> &larr; SKM Home</a></li>
         </ul>
 
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a class="nav-link">
-                  <span style="display: flex; align-items: center; ">
-                          <i class="bi bi-person" style="color: floralwhite; margin-right: 6px;"></i>
-                          {% if logged_in %}
-                              member
-                          {% else %}
-                             visitor
-                          {% endif %}
-                        </span>
-                </a>
+
+        <ul class="nav navbar-nav navbar-right me-4">
+          <li class="nav-item">
+             <a id="tip_popover"
+             class="nav-link"
+               tabindex="0"
+               role="button"
+               data-trigger="focus"
+               data-toggle="popover"
+               data-bs-content='
+           <div style="width:100%;">
+              <h5>Queries</h5>
+                <p>Find entities (including reactions) in PSS using the searchbox, add them to the query, and then click "Search!" to extract the subnetwork.  </p>
+                <p>If the query contains only one node, a neighbourhood is returned. Otherwise, the undirected shortest paths between all pairs of nodes are merged and returned.</p>
+                <p>Note that the shortest path does not take into account the direction of the edges. </p>
+              <h5>Network tips</h5>
+                <p>Right click on an edge or node to access its context menu.</p>
+                <p>Double click on a node to expand its neighbours (reactions are already expanded). </p>
+                <p>Tick "Tooltips" to enable node and edge info boxes on hover.  </p>
+              <h5>Representation</h5>
+                <p>Reactions (and interactions) in PSS are represented as nodes, the participants and the reaction itself, and edges (or arcs) connecting participants to the reaction in an informational way. <p>
+
+                 <p> For example, the following reaction  (A + B &rarr; C, catalysed by e):
+                    <div style="width:400; height:135">
+                      <img  width=400px; height=135px"  src="https://skm.nib.si/static/home/images/basic-reaction-biology-labelled.png"/>
+                    </div>
+                  Is represented in PSS as:
+                    <div style="width:400px; height:200px;">
+                      <img width=400 height=200 src="https://skm.nib.si/static/home/images/basic-reaction-labelled.png"/>
+                    </div>
+                  </p>
+
+                 <p>For more information on the reaction representation, see <a href="https://skm.nib.si/documentation/pss-db#reaction-types" target="_blank">SKM Documentation &#167; Reactions</a>. </p>
+
+                <h5>More</h5>
+                <p>See see <a href="https://skm.nib.si/documentation/pss-explore" target="_blank">SKM Documentation &#167; PSS</a> for more details. </p>
+          </div>' data-bs-html="true" title="Usage">
+              Help!
+            </a>
+
+          </li>
+          <li class="nav-item">
+            <div class="nav-link">
+                  <input class="form-check-input" type="checkbox" id="showTooltipsCbox" value="" aria-label="...">
+                  <label class="ms-0" for="form-check-input">Tooltips</label>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" type="button" id="saveAsButton" data-bs-toggle="dropdown" aria-expanded="false">Export network
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu" id="saveAsDropdown" aria-labelledby="saveAsButton">
+              <li>
+                <a class="dropdown-item" href="#nodes">nodes (.csv format)</a>
               </li>
-       </ul>
+              <li>
+                <a class="dropdown-item" href="#edges">edges (.csv format)</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#png">image (.png format)</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#json">network (.json format)</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+              <a class="nav-link">
+                <span style="display: flex; align-items: center; ">
+                        <i class="bi bi-person" style="color: floralwhite; margin-right: 6px;"></i>
+                        {% if logged_in %}
+                            member
+                        {% else %}
+                           visitor
+                        {% endif %}
+                      </span>
+              </a>
+            </li>
+        </ul>
       </div>
     </nav> <!-- close nav bar -->
-
 
     <div class="container-fluid h-100">
 
         <div class="row" style="height:calc(100vh - 60px);"> <!-- h-100"> -->
-          <div class="px-1 col-xs-6 col-sm-5 col-md-5 col-lg-4 col-xl-3 col-xxl-3 border-end border-light border-2" id="configColumn">
-            <form class="h-100" id="searchform">
-              <div>
-                  <h1 class="card-title"> {% block page_title %}{% endblock %} </h1>
-                  <div  class="card-text"> {% block description %}{% endblock %} </div>
-              </div>
-
-              <div class="mb-3">
-                <div class="vstack gap-3">
-                  <input class="form-check-input" type="checkbox" id="showTooltipsCbox" value="" aria-label="...">
-                  <label class="mx-2" for="form-check-input">show tooltips</label>
-                </div>
-              </div>
-
+          <div class="col-xs-6 col-sm-5 col-md-5 col-lg-4 col-xl-3 col-xxl-3 border-end border-light border-2 p-3" id="configColumn">
+            <div>
+              <h1 class="card-title"> {% block page_title %}{% endblock %} </h1>
+              <div  class="card-text"> {% block description %}{% endblock %} </div>
+            </div>
+            <form id="searchform" class="h-100">
               {% block search_interface %}{% endblock %}
             </form>
           </div>
 
           <div class="col-xs-6 col-sm-7 col-md-7 col-lg-8 col-xl-9 col-xxl-9 h-100" id="networkViewContainer">
-              <div id="networkView"></div>
+            <div id="networkView"></div>
           </div>
         </div>
 
@@ -104,8 +158,6 @@
     </div>
 
   </body>
-
-
 
   <script type="text/javascript">
     // enable all popover in the document:
